<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Location.RechercheVoiture">

    <TextView
        android:id="@+id/textView33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:text="Rechercher une Voiture"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        android:background="?attr/colorBackgroundFloating"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rechercheParCategorie"
            android:textColor="?attr/actionMenuTextColor"
            android:textColorHint="?attr/actionMenuTextColor"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spnRechVoiture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_rech_backgrd" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintRechercheParMarque"
            android:inputType="textPersonName"
            android:textColor="?attr/editTextColor"
            android:textColorHint="?attr/actionMenuTextColor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintRechercheParModele"
            android:inputType="textPersonName"
            android:textColor="?attr/editTextColor"
            android:textColorHint="?attr/actionMenuTextColor"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:ems="10"
                android:hint="@string/hintTarifInf"
                android:inputType="number"
                android:textColor="?attr/editTextColor"
                android:textColorHint="?attr/actionMenuTextColor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:ems="10"
                android:hint="@string/hintTarifSup"
                android:inputType="number"
                android:textColor="?attr/editTextColor"
                android:textColorHint="?attr/actionMenuTextColor"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:ems="10"
                android:hint="@string/hintDateInf"
                android:inputType="date"
                android:textColor="?attr/editTextColor"
                android:textColorHint="?attr/actionMenuTextColor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:ems="10"
                android:hint="@string/hintDateSup"
                android:inputType="date"
                android:textColor="?attr/editTextColor"
                android:textColorHint="?attr/actionMenuTextColor"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bouton_enr"
            android:text="Rechercher"
            android:textColor="@color/couleurTexteBouton"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>